# mtec_marketing_cpa

./: CPA_Data_IntroductionToMarketing_2024.xlsx  README.md  analysis.ipynb  answers.md  pyproject.toml
CPA_Data_IntroductionToMarketing_2024/: clv.csv  filter_user.csv
