[tool.poetry]
name = "marketing"
version = "0.1.0"
description = ""
authors = ["Romeo Stoll <47355990+rstol@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
plotly = "^5.24.1"
plotly-express = "^0.4.1"
ipykernel = "^6.29.5"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
